--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,28 @@ img {
 }
 
 .container {
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .portfolio-margin {
@@ -223,7 +240,13 @@ body {
 
 .features {
   margin-top: 0;
-  margin-bottom: 94px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .features {
+    margin-bottom: 94px;
+  }
 }
 
 .features-tittle-main {
@@ -232,17 +255,32 @@ body {
   color: transparent;
 }
 
-.features-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .features-item {
-  width: calc((100% - 90px) / 4);
   margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .features-item {
+    width: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-item {
+    width: calc((100% - 90px) / 4);
+    margin-bottom: 0;
+  }
 }
 
 .features-item:nth-child(4n) {
@@ -291,6 +329,12 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 1199px) {
+  .example {
+    display: none;
+  }
 }
 
 .example {
