--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -16,12 +16,24 @@ img {
 }
 
 .container {
-  width: 1200px;
+  // width: 1200px;
 
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @media screen and (min-width: $mobile) {
+    width: $mobile;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: $tablet;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: $desktop;
+  }
 }
 
 .portfolio-margin {
