--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -27,6 +27,12 @@ $font-weight-logo: 700;
 $font-size-logo: 22px;
 $line-height-logo: 1.18;
 
+// Screen size
+
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1200px;
+
 // link {
 //   text-decoration: none;
 // }
