--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,24 +1,43 @@
 .team {
   margin-top: 0px;
-  margin-bottom: 94px;
+  margin-bottom: 60px;
 
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-color: #f5f4fa;
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 94px;
+
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team-list {
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .team-item {
-  width: calc((100% - 90px) / 4);
   margin-right: 30px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: $tablet) {
+    width: calc((100% - 60px) / 2);
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: calc((100% - 90px) / 4);
+    margin-bottom: 0;
+  }
+
   background: $primary-white-color;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
