--- a/css/main.css
+++ b/css/main.css
@@ -558,18 +558,30 @@ body {
 
 .clients {
   margin-top: 0;
-  margin-bottom: 94px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    margin-bottom: 94px;
+  }
 }
 
 .clients-tittle {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-align: center;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-tittle {
+    margin-bottom: 50px;
+  }
 }
 
 .clients-list {
@@ -581,8 +593,26 @@ body {
 }
 
 .clients-item {
-  width: calc((100% - 150px) / 6);
   margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 480px) {
+  .clients-item {
+    width: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-item {
+    width: calc((100% - 90px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-item {
+    width: calc((100% - 150px) / 6);
+  }
 }
 
 .clients-item:nth-child(6n) {
