--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,8 @@ body {
 .logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 22px;
-  line-height: 1.18;
+  font-size: 26px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: #000000;
 }
@@ -78,8 +78,8 @@ body {
 .logo-blue {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 22px;
-  line-height: 1.18;
+  font-size: 26px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: #2196f3;
 }
@@ -595,12 +595,7 @@ body {
 .clients-item {
   margin-right: 30px;
   margin-bottom: 30px;
-}
-
-@media screen and (min-width: 480px) {
-  .clients-item {
-    width: calc((100% - 60px) / 2);
-  }
+  width: calc((100% - 60px) / 2);
 }
 
 @media screen and (min-width: 768px) {
@@ -887,63 +882,85 @@ footer {
 }
 
 .footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.footer-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 231px;
-  margin-right: 69px;
+@media screen and (max-width: 1199px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .tablet-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.logo-footer {
+  margin-bottom: 20px;
 }
 
 .logo-white {
   margin-top: 0;
-  margin-bottom: 10px;
   font-family: Raleway;
   font-weight: 700;
-  font-size: 22px;
-  line-height: 1.18;
+  font-size: 26px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
 
-.invite-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-right: 94px;
-  width: 206px;
+.footer-address {
+  margin-bottom: 60px;
 }
 
-.invite-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.invite-list .invite-item {
-  margin-right: 10px;
-}
-
-.invite-list .invite-item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .footer-address {
+    margin-bottom: 0;
+  }
 }
 
 .address-str {
@@ -968,9 +985,53 @@ footer {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (min-width: 768px) {
+  .logo-add {
+    margin-right: 165px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-add {
+    margin-right: 69px;
+  }
+}
+
+.invite-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .invite-flex {
+    margin-right: 94px;
+    margin-bottom: 0;
+  }
+}
+
+.invite-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.invite-list .invite-item {
+  margin-right: 10px;
+}
+
+.invite-list .invite-item:last-child {
+  margin-right: 0;
+}
+
 .invite {
   margin-top: 0;
-  margin-bottom: 21px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -1008,8 +1069,19 @@ footer {
   height: 20px;
 }
 
+.subscribe-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .subscribe {
   margin-top: 0;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -1018,14 +1090,15 @@ footer {
   color: #ffffff;
 }
 
-.subscribe-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 21px;
+@media screen and (min-width: 1200px) {
+  .subscribe-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .subscribe-field {
@@ -1033,6 +1106,13 @@ footer {
   width: 358px;
   margin-top: 0;
   margin-right: 12px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-field {
+    margin-bottom: 0;
+  }
 }
 
 .form-subscribe {
@@ -1052,6 +1132,13 @@ footer {
   display: -ms-flexbox;
   display: flex;
   padding: 10px 29px;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscribe-button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .subscribe-text {
