--- a/css/main.css
+++ b/css/main.css
@@ -85,45 +85,97 @@ body {
 }
 
 .main-nav {
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.logo-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  white-space: nowrap;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-nav {
+    margin-right: 85px;
+  }
 }
 
 .site-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 85px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav-list .link:hover,
+.site-nav-list .link:focus {
   color: #2196f3;
 }
 
-.site-nav .link.nav-tittle {
+@media screen and (min-width: 768px) {
+  .site-nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.site-nav-list .link {
   color: #212121;
 }
 
-.site-nav .item {
-  margin-right: 50px;
+@media screen and (max-width: 767px) {
+  .site-nav-list .item {
+    margin-bottom: 40px;
+  }
 }
 
-.site-nav .item:last-child {
+@media screen and (min-width: 768px) {
+  .site-nav-list .item {
+    margin-right: 50px;
+  }
+}
+
+.site-nav-list .item:last-child {
   margin-right: 0;
 }
 
-.site-nav .link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+@media screen and (max-width: 767px) {
+  .site-nav-list .item:last-child {
+    margin-bottom: 60px;
+  }
+}
+
+.site-nav-list .link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -133,12 +185,28 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav .link.current {
+@media screen and (max-width: 767px) {
+  .site-nav-list .link {
+    display: inline-block;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav-list .link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.site-nav-list .link.current {
   position: relative;
   color: #2196f3;
 }
 
-.site-nav .link.current::after {
+.site-nav-list .link.current::after {
   position: absolute;
   content: '';
   left: 0px;
@@ -149,21 +217,44 @@ body {
   background-color: #2196f3;
 }
 
-.auth-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-}
-
 .auth-nav .icon-nav:hover,
 .auth-nav .icon-nav:focus {
   color: #2196f3;
   fill: #2196f3;
 }
 
-.auth-nav .item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .auth-nav {
+    display: inline-block;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .auth-nav .item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .auth-nav .item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth-nav .item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .auth-nav .link {
@@ -178,13 +269,18 @@ body {
 }
 
 .icon-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   fill: #757575;
+}
+
+@media screen and (min-width: 1200px) {
+  .icon-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .icon-envelope {
@@ -197,6 +293,92 @@ body {
   width: 10px;
   height: 15px;
   margin-right: 10px;
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-button {
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  background-color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
+  .menu-container.is-open {
+    display: block;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 305;
+  }
 }
 
 .hero {
