--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -1,35 +1,85 @@
 .main-nav {
+  position: relative;
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    align-items: center;
+  }
+  // display: flex;
+  // align-items: center;
+}
+
+.logo-nav {
   display: flex;
+  // flex-wrap: nowrap;
+  // flex-direction: row;
+  // justify-content: center;
   align-items: center;
+  white-space: nowrap;
+
+  @media screen and (min-width: $tablet) {
+    // margin-right: 81px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-right: 85px;
+  }
 }
 
 .site-nav {
   display: flex;
-  margin-left: 85px;
-  align-items: center;
+  // margin-left: 85px;
+  // align-items: center;
+}
 
+.site-nav-list {
   & .link:hover,
   & .link:focus {
     color: $accent-color;
   }
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    align-items: center;
+    // justify-content: center;
+
+    margin-left: auto;
+    // margin-right: 84px;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    // margin-left: 85px;
+    // margin-right: auto;
+    align-items: center;
+  }
 }
 
-.site-nav .link.nav-tittle {
+.site-nav-list .link {
   color: $tittle-text-color;
 }
 
-.site-nav .item {
-  margin-right: 50px;
+.site-nav-list .item {
+  // margin-right: 50px;
+  @media screen and (max-width: 767px) {
+    // margin-top: 60px;
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin-right: 50px;
+  }
 }
 
-.site-nav .item:last-child {
+.site-nav-list .item:last-child {
   margin-right: 0;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
 }
 
-.site-nav .link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+.site-nav-list .link {
+  // display: block;
 
   // font-weight: $font-weight-main-nav;
   // font-size: $font-size-main-nav;
@@ -41,14 +91,26 @@
   color: $tittle-text-color;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 767px) {
+    display: inline-block;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
-.site-nav .link.current {
+.site-nav-list .link.current {
   position: relative;
   color: $accent-color;
 }
 
-.site-nav .link.current::after {
+.site-nav-list .link.current::after {
   position: absolute;
   content: '';
   left: 0px;
@@ -61,18 +123,39 @@
 }
 
 .auth-nav {
-  display: flex;
-  margin-left: auto;
+  // display: flex;
+  // margin-left: auto;
 
   & .icon-nav:hover,
   & .icon-nav:focus {
     color: $accent-color;
     fill: $accent-color;
   }
+
+  @media screen and (min-width: $tablet) {
+    display: inline-block;
+    // flex-direction: column;
+    margin-left: auto;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    margin-left: auto;
+  }
 }
 
 .auth-nav .item:not(:last-child) {
-  margin-right: 30px;
+  // margin-right: 30px;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 16px;
+  }
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-right: 30px;
+  }
 }
 
 .auth-nav .link {
@@ -92,9 +175,14 @@
 }
 
 .icon-nav {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
   fill: $primary-text-color;
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .icon-envelope {
@@ -107,4 +195,68 @@
   width: 10px;
   height: 15px;
   margin-right: 10px;
+}
+
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+
+  @media screen and (max-width: 767px) {
+    margin-left: auto;
+  }
+
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  // display: none;
+
+  background-color: $primary-white-color;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+
+    &.is-open {
+      display: block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+  }
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: center;
+    margin-right: 305;
+  }
 }
