--- a/css/main.css
+++ b/css/main.css
@@ -614,7 +614,6 @@ body {
 }
 
 .team-item {
-  margin-right: 30px;
   margin-bottom: 30px;
   background: #ffffff;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
@@ -624,6 +623,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .team-item {
+    margin-right: 30px;
     width: calc((100% - 60px) / 2);
   }
 }
@@ -635,8 +635,28 @@ body {
   }
 }
 
-.team-item:nth-child(4n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-item:nth-child(3n) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .team-item:nth-child(4n) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item:nth-child(4n) {
+    margin-right: 0;
+  }
 }
 
 .team-tittle,
