--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -30,15 +30,27 @@
 }
 
 .features-item {
-  margin-right: 30px;
   margin-bottom: 30px;
 
   @media screen and (min-width: $tablet) {
+    margin-right: 30px;
     width: calc((100% - 60px) / 2);
   }
 
   @media screen and (min-width: $desktop) {
     width: calc((100% - 90px) / 4);
+    margin-bottom: 0;
+  }
+}
+
+.features-item:nth-child(2n) {
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
+    margin-right: 0;
+  }
+}
+
+.features-item:nth-child(3n) {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 0;
   }
 }
