--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,12 @@ body {
   white-space: nowrap;
 }
 
+@media screen and (min-width: 768px) {
+  .logo-nav {
+    margin-right: 81px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .logo-nav {
     margin-right: 85px;
@@ -134,7 +140,6 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-left: auto;
   }
 }
 
@@ -225,7 +230,13 @@ body {
 
 @media screen and (min-width: 768px) {
   .auth-nav {
-    display: inline-block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-left: auto;
   }
 }
@@ -235,6 +246,10 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     margin-left: auto;
   }
 }
@@ -366,6 +381,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    width: 100%;
   }
 }
 
@@ -377,7 +393,6 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-right: 305;
   }
 }
 
@@ -405,15 +420,25 @@ body {
 .hero-tittle {
   margin-top: 0;
   margin-bottom: 46px;
-  width: 646px;
+  width: 360px;
   margin-left: auto;
   margin-right: auto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-tittle {
+    width: 696px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+  }
 }
 
 .button.primary {
