--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -17,8 +17,10 @@
   align-items: center;
   white-space: nowrap;
 
+  // padding-left: 15px;
+
   @media screen and (min-width: $tablet) {
-    // margin-right: 81px;
+    margin-right: 81px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -43,7 +45,7 @@
     align-items: center;
     // justify-content: center;
 
-    margin-left: auto;
+    // margin-left: auto;
     // margin-right: 84px;
   }
   @media screen and (min-width: $desktop) {
@@ -133,13 +135,15 @@
   }
 
   @media screen and (min-width: $tablet) {
-    display: inline-block;
-    // flex-direction: column;
+    // display: inline-block;
+    display: flex;
+    flex-direction: column;
     margin-left: auto;
   }
 
   @media screen and (min-width: $desktop) {
     display: flex;
+    flex-direction: row;
     margin-left: auto;
   }
 }
@@ -252,11 +256,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
   }
 
   @media screen and (min-width: $desktop) {
     display: flex;
     align-items: center;
-    margin-right: 305;
+    // margin-right: 305;
   }
 }
