--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,8 @@ a {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .container {
@@ -53,6 +55,22 @@ img {
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
+  }
+}
+
+.tumb {
+  width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .tumb {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .tumb {
+    width: 270px;
   }
 }
 
