--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,16 +13,43 @@
   margin-left: auto;
   margin-right: auto;
   background-color: grey;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url('../images/Header.jpg');
+    url(../images/hero/hero-480.jpg);
+}
 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero-background {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero/hero-768.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 3),
+  screen and (min-resolution: 3dppx),
+  screen and (min-resolution: 288dpi) {
+  .hero-background {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero/hero-1600.jpg);
+  }
 }
 
 .hero-tittle {
