--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -50,6 +50,19 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .clients-item:nth-child(2n),
+  .clients-item:nth-child(4n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .clients-item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
 .clients-item:nth-child(6n) {
   margin-right: 0;
 }
