--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -26,6 +26,8 @@
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
 }
 
