--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,14 +28,19 @@
 
   padding: 40px;
 
-  min-width: 528px;
-  min-height: 581px;
+  min-width: 450px;
+  min-height: 609px;
 
   background-color: $primary-white-color;
 
   transform: translate(-50%, -50%) scale(1);
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: $desktop) {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-tittle-container {
@@ -58,6 +63,10 @@
 
 .form {
   width: 448px;
+
+  @media screen and (max-width: 1199px) {
+    width: 370px;
+  }
 }
 
 .form-field {
