--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -24,6 +24,24 @@
       rgba(47, 48, 58, 0.8)
     ),
     url(../images/hero/hero-480.jpg);
+
+  @media screen and (min-width: $tablet) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero/hero-768.jpg);
+  }
+
+  @media screen and (min-width: $desktop) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero/hero-1600.jpg);
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2),
@@ -35,7 +53,7 @@
         rgba(47, 48, 58, 0.8),
         rgba(47, 48, 58, 0.8)
       ),
-      url(../images/hero/hero-768.jpg);
+      url(../images/hero/hero-1536.jpg);
   }
 }
 
@@ -48,7 +66,7 @@
         rgba(47, 48, 58, 0.8),
         rgba(47, 48, 58, 0.8)
       ),
-      url(../images/hero/hero-1600.jpg);
+      url(../images/hero/hero-3200.jpg);
   }
 }
 
