--- a/css/main.css
+++ b/css/main.css
@@ -1108,9 +1108,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -1130,7 +1130,6 @@ body {
   width: 16px;
   height: 15px;
   margin-right: 7px;
-  margin-left: 12px;
   border: 2px solid #212121;
   border-radius: 4px;
 }
@@ -1144,10 +1143,17 @@ body {
 }
 
 .checkbox-label {
-  font-size: 14px;
-  line-height: 1.7;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media screen and (min-width: desktop) {
+  .checkbox-label {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
 .checkbox-link {
