--- a/css/main.css
+++ b/css/main.css
@@ -972,7 +972,7 @@ body {
   top: 50%;
   left: 50%;
   padding: 40px;
-  min-width: 450px;
+  max-width: 450px;
   min-height: 609px;
   background-color: #ffffff;
   -webkit-transform: translate(-50%, -50%) scale(1);
