--- a/css/main.css
+++ b/css/main.css
@@ -956,6 +956,13 @@ body {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 767px) {
+  .backdrop {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
@@ -972,7 +979,7 @@ body {
   top: 50%;
   left: 50%;
   padding: 40px;
-  min-width: 450px;
+  max-width: 100%;
   min-height: 609px;
   background-color: #ffffff;
   -webkit-transform: translate(-50%, -50%) scale(1);
