--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,6 +9,11 @@
 
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 767px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -28,7 +33,9 @@
 
   padding: 40px;
 
-  min-width: 450px;
+  max-width: 100%;
+
+  // min-width: 450px;
   min-height: 609px;
 
   background-color: $primary-white-color;
