--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -45,7 +45,12 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 450px) {
-    max-width: 100%;
+    // max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   @media screen and (min-width: $desktop) {
@@ -76,9 +81,9 @@
   width: 448px;
 
   @media screen and (max-width: 450px) {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
+    // display: block;
+    // flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%;
   }
