--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -92,7 +92,7 @@
     width: 100%;
   }
 
-  @media screen and (max-width: 1199px) {
+  @media screen and (max-width: $tablet) {
     width: 370px;
   }
 }
