--- a/css/main.css
+++ b/css/main.css
@@ -1057,6 +1057,13 @@ body {
 
 @media screen and (max-width: 1199px) {
   .form {
+    display: block;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 370px;
   }
 }
