--- a/sass/components/portfolio/_btn.scss
+++ b/sass/components/portfolio/_btn.scss
@@ -1,6 +1,4 @@
 .btn {
-  display: flex;
-  justify-content: center;
   margin-bottom: 50px;
 
   & .button:hover,
@@ -9,6 +7,15 @@
     color: $primary-white-color;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 3px rgba(0, 0, 0, 0.12);
+  }
+
+  @media screen and (max-width: $mobile) {
+    max-width: 362px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -27,6 +34,15 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 15px;
+  }
+}
+
+.button:nth-child(4n),
+.button:nth-child(5n) {
+  margin-bottom: 0;
 }
 
 .button:last-child {
