--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -363,6 +363,7 @@ body {
 }
 
 .menu-container {
+  z-index: 1;
   background-color: #ffffff;
 }
 
@@ -478,17 +479,17 @@ body {
   margin-bottom: 94px;
 }
 
-.work-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .work-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .work-item {
-  width: 370px;
-  margin-right: 30px;
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -507,8 +508,41 @@ body {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.work-item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (max-width: 767px) {
+  .work-item {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .work-item {
+    margin-right: 30px;
+    width: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-item {
+    width: calc((100% - 90px) / 3);
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .work-item:nth-child(2n),
+  .work-item:nth-child(4n),
+  .work-item:nth-child(6n),
+  .work-item:nth-child(8n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-item:nth-child(3n),
+  .work-item:nth-child(6n),
+  .work-item:nth-child(9n) {
+    margin-right: 0;
+  }
 }
 
 .work-item:nth-last-child(-n + 3) {
