--- a/sass/components/portfolio/_work.scss
+++ b/sass/components/portfolio/_work.scss
@@ -4,13 +4,15 @@
 }
 
 .work-list {
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .work-item {
-  width: 370px;
-  margin-right: 30px;
+  // width: 370px;
+
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
 
@@ -24,11 +26,42 @@
   &:focus-within {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
+
+  @media screen and (max-width: 767px) {
+    margin-right: 0;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin-right: 30px;
+    width: calc((100% - 60px) / 2);
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: calc((100% - 90px) / 3);
+    margin-bottom: 30px;
+  }
 }
 
-.work-item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: $tablet) and (max-width: 1199px) {
+  .work-item:nth-child(2n),
+  .work-item:nth-child(4n),
+  .work-item:nth-child(6n),
+  .work-item:nth-child(8n) {
+    margin-right: 0;
+  }
 }
+
+@media screen and (min-width: $desktop) {
+  .work-item:nth-child(3n),
+  .work-item:nth-child(6n),
+  .work-item:nth-child(9n) {
+    margin-right: 0;
+  }
+}
+
+// .work-item:nth-child(3n) {
+//   margin-right: 0;
+// }
 
 .work-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
